--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
 
     <string name="email">이메일 주소</string>
     <string name="pw">비밀번호</string>
-    <string name="invalid_email">올바르지 않은 이메일 형식 입니다!</string>
-    <string name="invalid_pw">비밀번호가 틀렸습니다!</string>
+    <string name="invalid_email_format">올바르지 않은 이메일 형식 입니다!</string>
+    <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
 </resources>
