--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,30 @@
 
     <string name="already_have_account">이미 계정이 있으신가요?</string>
 
+    <string name="nickname">닉네임</string>
     <string name="email">이메일 주소</string>
+    <string name="email_only">이메일</string>
     <string name="pw">비밀번호</string>
     <string name="invalid_email_format">올바르지 않은 이메일 형식 입니다!</string>
     <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
+
+    <string name="setting_change"><b>설정 변경</b></string>
+    <string name="setting_profile"><b>프로필 설정</b></string>
+
+    <string name="setting_alert">알림 설정</string>
+    <string name="customer_center">고객 센터</string>
+    <string name="review">리뷰 및 평가하기</string>
+    <string name="help">도움 및 설명</string>
+    <string name="rules">이용 수칙</string>
+    <string name="pw_reset">비밀번호 재설정</string>
+    <string name="logout"><b><u>로그아웃</u></b></string>
+
+    <string name="event_push_alert">이벤트 및 기능 추가 Push 알림</string>
+    <string name="event_push_alert_desc">프로모션 및 새 업데이트에 대해 알려드려요</string>
+    <string name="night_push_alert">야간시간(20:00-24:00) Push 알림</string>
+    <string name="night_push_alert_desc">프로모션 및 새 업데이트에 대해 알려드려요</string>
+
+    <string name="version_info">Ttukttak ver0.0 (0.0.00)</string>
 
     <string name="find_id_or_pw"><u>아이디 및 비밀번호 찾기</u></string>
 </resources>
