--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
 
     <string name="find_id_or_pw"><u>아이디 및 비밀번호 찾기</u></string>
+    <string name="logout"><u>로그아웃</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
