--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,22 @@
     <string name="invalid_email_format">올바르지 않은 이메일 형식 입니다!</string>
     <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
 
+    <string name="user_name">김뚝딱이</string>
+    <string name="user_email">ttuck@ttuckttak.com</string>
+    <string name="alert_setting">알림 설정</string>
+    <string name="consumer_center">고객 센터</string>
+    <string name="review">리뷰 및 평가하기</string>
+    <string name="help">도움 및 설명</string>
+    <string name="use">이용 수칙</string>
+    <string name="ttuckttak_version">Ttukttak ver 2.0 (1.11.11)</string>
+    <string name="change_settings">설정 변경</string>
+    <string name="profile_settings">프로필 설정</string>
+    <string name="input_nikname">닉네임</string>
+    <string name="input_email">이메일</string>
+    <string name="password_reset">비밀번호 재설정하기</string>
+    <string name="event_push_alert">이벤트 및 기능추가 push 알림</string>
+    <string name="night_time_alert">야간시간(20:00-24:00) Push 알림</string>
+    <string name="push_alert_add">프로모션 및 새 업데이트에 대해 알려드려요</string>
     <string name="find_id_or_pw"><u>아이디 및 비밀번호 찾기</u></string>
     <string name="logout"><u>로그아웃</u></string>
     <!-- TODO: Remove or change this placeholder text -->
