--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="find_id_or_pw"><u>아이디 및 비밀번호 찾기</u></string>
     <string name="logout"><u>로그아웃</u></string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="blank_text">blank_text</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
