--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="text_start">탭해서 진단을 시작해보세요!</string>
 
     <!--  로그인 화면  -->
+    <string name="wrong_email_or_password">이메일 혹은 비밀번호가 틀렸습니다.</string>
     <string name="login">로그인하기</string>
     <!--    -->
 
