--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="text_welcome3"><u>이미 계정이 있으신가요?</u></string>
     <string name="text_start">탭해서 진단을 시작해보세요!</string>
 
+    <string name="unexpected_error_occurred">예상치 못한 에러가 발생하였습니다.</string>
+
     <!--  로그인 화면  -->
     <string name="wrong_email_or_password">이메일 혹은 비밀번호가 틀렸습니다.</string>
     <string name="login">로그인하기</string>
