--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,10 @@
     <!--  로그인 화면  -->
     <string name="wrong_email_or_password">이메일 혹은 비밀번호가 틀렸습니다.</string>
     <string name="login">로그인하기</string>
-    <!--    -->
+    <string name="bcak_content_description">뒤로 가기</string>
+    <string name="logo_content_description">로고</string>
+    <string name="email_autofill">이메일</string>
+    <string name="password_autofill">비밀번호</string>
 
 
     <string name="email">이메일 주소</string>
