REFACTOR LANGDING PAGE UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
     <string name="app_name">Android_TtuckTtak</string>
+
+    <!-- 랜딩 페이지 -->
     <string name="text_welcome1"><font color='#1DB9DB'>뚝딱</font>하실\n준비되셨나요?</string>
     <string name="text_welcome2">알고리즘 기반의 똑똑한 뚝딱과 함께\n데스크탑의 자가수리에 성공하세요.</string>
     <string name="sign_up">가입하기</string>
+    <string name="google_sign_up">Google 계정으로 로그인</string>
+    <string name="kakao_sign_up">카카오 로그인</string>
+
     <string name="text_welcome3"><u>이미 계정이 있으신가요?</u></string>
     <string name="text_start">탭해서 진단을 시작해보세요!</string>
 
