--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,23 +7,32 @@
     <string name="sign_up">가입하기</string>
     <string name="google_sign_up">Google 계정으로 로그인</string>
     <string name="kakao_sign_up">카카오 로그인</string>
-
     <string name="text_welcome3"><u>이미 계정이 있으신가요?</u></string>
-    <string name="text_start">탭해서 진단을 시작해보세요!</string>
+
+    <!--  로그인 화면  -->
+    <string name="email">이메일 주소</string>
+    <string name="wrong_email_or_password">이메일 혹은 비밀번호가 틀렸습니다.</string>
+    <string name="login">로그인하기</string>
+    <string name="pw">비밀번호</string>
+    <string name="find_id_or_pw1"><u>계정 및 비밀번호 찾기</u></string>
+
+
+    <string name="invalid_email_format">올바르지 않은 이메일 형식 입니다!</string>
+    <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
+
+    <!-- contentDescription -->
+    <string name="back_content_description">뒤로가기</string>
+    <string name="logo_content_description">뚝딱로고</string>
+
+    <!-- Autofill -->
+    <string name="email_autofill">이메일 에딧 텍스트</string>
+    <string name="password_autofill">비밀번호 에딧 텍스트</string>
 
     <string name="unexpected_error_occurred">예상치 못한 에러가 발생하였습니다.</string>
     <string name="request_failed">요청에 실패하였습니다.</string>
 
-    <!--  로그인 화면  -->
-    <string name="wrong_email_or_password">이메일 혹은 비밀번호가 틀렸습니다.</string>
-    <string name="login">로그인하기</string>
-    <!--    -->
 
 
-    <string name="email">이메일 주소</string>
-    <string name="pw">비밀번호</string>
-    <string name="invalid_email_format">올바르지 않은 이메일 형식 입니다!</string>
-    <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
     <string name="latest_result">최근 진단내역</string>
 
     <string name="user_name">김뚝딱이</string>
@@ -46,7 +55,7 @@
     <string name="event_push_alert">이벤트 및 기능추가 push 알림</string>
     <string name="night_time_alert">야간시간(20:00-24:00) Push 알림</string>
     <string name="push_alert_add">프로모션 및 새 업데이트에 대해 알려드려요</string>
-    <string name="find_id_or_pw1"><u>계정 및 비밀번호 찾기</u></string>
+
     <string name="find_id_or_pw2">계정 및 비밀번호 찾기</string>
     <string name="login_incorrect">이메일 혹은 비밀번호가 틀렸습니다!</string>
     <string name="not_account">계정이 존재하지 않습니다!</string>
