--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,12 +31,30 @@
     <string name="certification_code_problem"><u>인증코드에 문제가 있나요?</u></string>
     <string name="timer">00:00</string>
     <string name="certification">인증하기</string>
+    <string name="join_user_name">사용하실 닉네임을 정해주세요</string>
+    <string name="user_name">예) 뚝딱이</string>
+    <string name="overlap_nickname">이미 사용중인 닉네임입니다.</string>
+    <string name="join_user_password">사용하실 비밀번호를 정해주세요</string>
+    <string name="invalid_nickname">닉네임은 4글자 이상, 12글자 미만이어야 합니다.</string>
+    <string name="password_rule">9글자 이상으로, 대소문자, 숫자와 특수문자가 포함되게 작성해주세요</string>
+    <string name="password_usable">사용가능한 비밀번호 입니다!</string>
+    <string name="password_error">비밀번호는 9글자 이상이어야 합니다.</string>
+    <string name="password_check">비밀번호 확인</string>
+    <string name="join">가입하기</string>
+    <string name="start">시작하기</string>
+    <string name="available_nickname">사용 가능한 닉네임입니다.</string>
+    <string name="discordance_pw">비밀번호가 일치하지 않아요.</string>
+    <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
 
     <string name="certification_code_resend">기입해주신 이메일 주소와\n스팸메일함, 메일함 용량을 다시 한번 확인해주세요! </string>
     <string name="email_reconfirm">“ttukttak@ttukttak.com”</string>
     <string name="certification_resend">인증코드 재전송</string>
 
-    <string name="invalid_pw_format">올바르지 않은 비밀번호 형식 입니다!</string>
+    <string name="agree_terms">서비스 이용 및 홍보 약관에 동의해요</string>
+    <string name="service_use_terms">[필수] <u>서비스 이용 약관</u>에 동의해요</string>
+    <string name="service_promote_terms">[선택] <u>서비스 홍보 약관</u>에 동의해요</string>
+    <string name="use_terms"><b>서비스 이용 약관</b></string>
+    <string name="promote_terms"><b>서비스 홍보 약관</b></string>
 
     <!-- contentDescription -->
     <string name="back_content_description">뒤로가기</string>
@@ -46,6 +64,7 @@
     <string name="email_autofill">이메일 에딧 텍스트</string>
     <string name="password_autofill">비밀번호 에딧 텍스트</string>
     <string name="code_autofill">인증코드</string>
+    <string name="name_autofill">닉네임</string>
 
 
     <string name="unexpected_error_occurred">예상치 못한 에러가 발생하였습니다.</string>
@@ -55,7 +74,7 @@
 
     <string name="latest_result">최근 진단내역</string>
 
-    <string name="user_name">김뚝딱이</string>
+
 
 
     <string name="email_reconfirm2">예) ttukttak@ttukttak.com</string>
@@ -268,18 +287,9 @@
     <string name="solution_detail">해결안 템플릿</string>
 
     <!-- -->
-    <string name="available_nickname">사용 가능한 닉네임입니다.</string>
-    <string name="overlap_nickname">이미 사용중인 닉네임입니다.</string>
 
 
-    <string name="discordance_pw">비밀번호가 일치하지 않아요.</string>
 
-
-    <string name="agree_terms">서비스 이용 및 홍보 약관에 동의해요</string>
-    <string name="service_use_terms">[필수] <u>서비스 이용 약관</u>에 동의해요</string>
-    <string name="service_promote_terms">[선택] <u>서비스 홍보 약관</u>에 동의해요</string>
-    <string name="use_terms"><b>서비스 이용 약관</b></string>
-    <string name="promote_terms"><b>서비스 홍보 약관</b></string>
     <string name="promote_terms_detail"><p>서비스 홍보 약관
 상품소개 등을 위한 개인정보의 처리 동의(선택)
 ① 소비자권익보호에 관한 사항
@@ -446,15 +456,8 @@
 제 25 조 (통지)
 ① 서비스가 회원에 대하여 통지를 하는 경우 서비스가 회사에 등록한 전자우편 주소로 할 수 있습니다.
 ② 서비스는 불특정다수 회원에게 통지를 해야 할 경우 공지 게시판을 통해 7일 이상 게시함으로써 개별 통지에 갈음할 수 있습니다.</p></string>
-    <string name="join_user_name">사용하실 닉네임을 정해주세요</string>
-    <string name="join_user_password">사용하실 비밀번호를 정해주세요</string>
-    <string name="invalid_nickname">닉네임은 4글자 이상, 12글자 미만이어야 합니다.</string>
-    <string name="password_rule">9글자 이상으로, 대소문자, 숫자와 특수문자가 포함되게 작성해주세요</string>
-    <string name="password_usable">사용가능한 비밀번호 입니다!</string>
-    <string name="password_error">비밀번호는 9글자 이상이어야 합니다.</string>
-    <string name="password_check">비밀번호 확인</string>
-    <string name="join">가입하기</string>
-    <string name="start">시작하기</string>
+
+
 
 
 
