REFACTOR SETTING PROFILE PAGE & ETC

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="user_nickname">김뚝딱이</string>
     <string name="logout"><u>로그아웃</u></string>
     <string name="push_alert_add">프로모션 및 새 업데이트에 대해 알려드려요</string>
+    <string name="undo_change">프로필 설정 화면에서 나가시겠어요?\n변경된 사항은 저장되지 않아요!</string>
+    <string name="undo">뒤로가기</string>
 
     <!-- contentDescription -->
     <string name="back_content_description">뒤로가기</string>
@@ -89,6 +91,9 @@
     <string name="home_content_description">홈 버튼</string>
     <string name="next_content_description">다음 버튼</string>
     <string name="profile_content_description">프로필 이미지</string>
+    <string name="save_content_description">변경사항 확인</string>
+    <string name="image_content_description">이미지 변경</string>
+
 
     <!-- Autofill -->
     <string name="email_autofill">이메일 에딧 텍스트</string>
@@ -108,8 +113,7 @@
     <string name="not_account">계정이 존재하지 않습니다!</string>
     <string name="btn_login">로그인 하기</string>
     <string name="find_pw">계정 찾기</string>
-    <string name="undo_change">프로필 설정 화면에서 나가시겠어요?\n변경된 사항은 저장되지 않아요!</string>
-    <string name="undo">뒤로가기</string>
+
 
     <!-- Reset Pw 화면 -->
     <string name="pw_reset_link">비밀번호 재설정 링크를\n이메일로 보내드렸어요!</string>
